[gd_scene load_steps=2 format=3 uid="uid://lp4oupxa8siq"]

[ext_resource type="Script" path="res://value_entry.gd" id="1_etceu"]

[node name="value_root" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_etceu")

[node name="option_name" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="option_text" type="LineEdit" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 10
alignment = 2
expand_to_text_length = true

[connection signal="tree_entered" from="option_name" to="." method="_on_option_name_tree_entered"]
[connection signal="tree_entered" from="option_text" to="." method="_on_option_text_tree_entered"]
